--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>Betty</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+    <head>
+        <title>Betty web page</title>
+        <link   href="style.css" rel="stylesheet">
+    </head>
+    <body>
+        <figure>
+        <img id='pozabety' src="images/bety7.jpeg" width="480px"  alt="Betty's head picture">
+        <figcaption>This is a picture with one of my favourite boxes</figcaption>
+    </figure>
+        <h1>Hello!!! My name is Batman!!!</h1>
+        <p>I like to eat all day!</p>
+
+    </body>
+
+
+
+
 </html>
