--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <figure>
-        <img id='pozabety' src="https://github.com/doobleG/betty/blob/main/bety7.jpeg" width="480px"  alt="Betty's head picture">
+        <img id='pozabety' src="![bety7](https://user-images.githubusercontent.com/110555143/213235304-108949a5-8c0c-4682-9ae2-b1f09cfe96ea.jpeg)
+" width="480px"  alt="Betty's head picture">
         <figcaption>This is a picture with one of my favourite boxes</figcaption>
     </figure>
         <h1>Hello!!! My name is Batman!!!</h1>
