--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <figure>
-        <img id='pozabety' src="/root/betty7.jpg" width="480px"  alt="Betty's head picture">
+        <img id='pozabety' src="/root/betty7.jpeg" width="480px"  alt="Betty's head picture">
         <figcaption>This is a picture with one of my favourite boxes</figcaption>
     </figure>
         <h1>Hello!!! My name is Batman!!!</h1>
