--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <figure>
-        <img id='pozabety' url="![bety7](https://user-images.githubusercontent.com/110555143/213249592-da3c4e8d-2097-47b5-abd8-fa5f2304a4ac.jpeg)
-" width="480px"  alt="Betty's head picture">
+        <img id='pozabety' src="./betty7.jpeg" width="480px"  alt="Betty's head picture">
         <figcaption>This is a picture with one of my favourite boxes</figcaption>
     </figure>
         <h1>Hello!!! My name is Batman!!!</h1>
